--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,18 @@ h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.0
 lxml==4.7.1
+numpy==1.22.2
 outcome==1.1.0
+pandas==1.4.1
 pycparser==2.21
 pyee==8.2.2
 pyOpenSSL==22.0.0
 pyppeteer==1.0.2
+python-dateutil==2.8.2
+pytz==2021.3
 requests==2.27.1
 selenium==4.1.0
+six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
