--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
+et-xmlfile==1.1.0
 h11==0.13.0
 idna==3.3
 importlib-metadata==4.11.0
 lxml==4.7.1
 numpy==1.22.2
+openpyxl==3.0.9
 outcome==1.1.0
 pandas==1.4.1
 pycparser==2.21
@@ -31,4 +33,5 @@ trio-websocket==0.9.2
 urllib3==1.26.8
 websockets==10.1
 wsproto==1.0.0
+xlwt==1.3.0
 zipp==3.7.0
